[package]
name = "gfx"
version = "0.1.0"
authors = ["Declan Hopkins <hopkins.declan@gmail.com>"]
edition = "2018"

[dependencies]
winit = { git = "https://github.com/chemicstry/winit/", branch = "optional_drag_and_drop" }
nalgebra = "0.20.0"
nalgebra-glm = "0.6.0"
image = "0.22.3"

[dependencies.gfx-hal]
version = "0.5.0"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.5.0"

[target.'cfg(all(unix, not(target_os="macos")))'.dependencies.gfx-backend-vulkan]
version = "0.5.0"

[build-dependencies]
glsl-to-spirv = "0.1.7"